# python-simplifier

./: LICENSE  SKILL.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release.yml
references/: ai-generated-code.md  critical-review-guide.md  design-patterns.md  messy-repo-runbook.md  naming-comments-readability.md  overengineering-and-abstraction.md  patterns-and-consistency.md  refactoring-catalog.md  refactoring-techniques.md  safety-net-and-testing.md  typing-and-modernization.md
scripts/: analyze_all.py  analyze_complexity.py  analyze_diff.py  find_ai_scaffolding.py  find_boolean_params.py  find_code_smells.py  find_comment_smells.py  find_coupling_issues.py  find_dead_code.py  find_debug_leftovers.py  find_dependency_issues.py  find_design_smells.py  find_duplicate_definitions.py  find_duplicates.py  find_exception_issues.py  find_global_state.py  find_import_cycles.py  find_local_imports.py  find_loop_simplifications.py  find_missing_docstrings.py  find_mutation_hazards.py  find_naming_issues.py  find_outdated_idioms.py  find_overengineering.py  find_parameter_objects.py  find_pattern_issues.py  find_redundant_comments.py  find_resource_leaks.py  find_return_issues.py  find_security_issues.py  find_test_smells.py  find_type_gaps.py  find_unawaited_coroutines.py  find_unpythonic.py  find_untested_modules.py  format_findings.py  run_external_tools.py
tests/: test_detectors.py
